--- a/portfolio.html
+++ b/portfolio.html
@@ -191,58 +191,56 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <div class="foot">
-                <div class="footerLogotipe">
-                    <a href="./index.html" class="logo-footer"><span class="web-footer">Web</span>Studio</a>
-                    <p class="footer-text">Increase the flow of customers and<br>sales for your business with
-                        digital<br>marketing & growth solutions.
-                    </p>
-                </div>
-                <div class="networks">
-                    <h4 class="networks-title">Social media</h4>
-                    <ul class="networks-list">
-                        <li class="networks-icon">
-                            <a href="#" class="networksIconLink">
-                                <svg width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="networks-icon">
-                            <a href="#" class="networksIconLink">
-                                <svg width="16" height="16">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="networks-icon">
-                            <a href="#" class="networksIconLink">
-                                <svg width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="networks-icon">
-                            <a href="#" class="networksIconLink">
-                                <svg width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="subscribe">
-                    <form>
-                        <label for="mail" class="media-title">Social media</label>
-                        <div class="subscribe-form">
-                            <input type="mail" name="mail" id="mail" class="subscribe-mail" placeholder="E-mail" />
-                            <button type="submit" class="btn-subscribe">Subscribe<svg class="iconSend" width="24" height="20">
-                                    <use href="./images/icons.svg#icon-icon-send"></use>
-                                </svg></button>
-                        </div>
-                    </form>
-                </div>
+        <div class="container foot">
+            <div class="footerLogotipe">
+                <a href="./index.html" class="logo-footer"><span class="web-footer">Web</span>Studio</a>
+                <p class="footer-text">Increase the flow of customers and<br>sales for your business with
+                    digital<br>marketing & growth solutions.
+                </p>
+            </div>
+            <div class="networks">
+                <h4 class="networks-title">Social media</h4>
+                <ul class="networks-list">
+                    <li class="networks-icon">
+                        <a href="#" class="networksIconLink">
+                            <svg width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="networks-icon">
+                        <a href="#" class="networksIconLink">
+                            <svg width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="networks-icon">
+                        <a href="#" class="networksIconLink">
+                            <svg width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="networks-icon">
+                        <a href="#" class="networksIconLink">
+                            <svg width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="subscribe">
+                <p class="media-title">Subscribe</p>
+                <form class="form-footer">
+                    <lable class="subscribe-form">
+                        <input type="mail" name="mail" id="mail" class="subscribe-mail" placeholder="E-mail" />
+                        <button type="submit" class="btn-subscribe">Subscribe<svg class="iconSend" width="24" height="20">
+                                <use href="./images/icons.svg#icon-icon-send"></use>
+                            </svg></button>
+                    </lable>
+                </form>
             </div>
         </div>
     </footer>
