--- a/index.html
+++ b/index.html
@@ -378,10 +378,12 @@
                 <form class="form-footer">
                     <lable class="subscribe-form">
                         <input type="email" name="mail" id="mail" class="subscribe-mail" placeholder="E-mail"/>
-                        <button type="submit" class="btn-subscribe">Subscribe<svg class="iconSend" width="24" height="20">
-                                <use href="./images/icons.svg#icon-icon-send"></use>
-                            </svg></button>
-                        </lable>
+                    </lable>
+                    <button type="submit" class="btn-subscribe">Subscribe
+                    <svg class="iconSend" width="24" height="20">
+                        <use href="./images/icons.svg#icon-icon-send"></use>
+                    </svg>
+                    </button>
                 </form>
             </div>
         </div>
