--- a/portfolio.html
+++ b/portfolio.html
@@ -235,11 +235,13 @@
                 <p class="media-title">Subscribe</p>
                 <form class="form-footer">
                     <lable class="subscribe-form">
-                        <input type="mail" name="mail" id="mail" class="subscribe-mail" placeholder="E-mail" />
-                        <button type="submit" class="btn-subscribe">Subscribe<svg class="iconSend" width="24" height="20">
-                                <use href="./images/icons.svg#icon-icon-send"></use>
-                            </svg></button>
+                        <input type="email" name="mail" id="mail" class="subscribe-mail" placeholder="E-mail" />
                     </lable>
+                    <button type="submit" class="btn-subscribe">Subscribe
+                        <svg class="iconSend" width="24" height="20">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </div>
